--- a/src/main/resources/templates/paciente/index.html
+++ b/src/main/resources/templates/paciente/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-    <head>
-        <title>Paciente</title>
-    </head>
+     <head th:include="layout :: htmlhead"></head>
     <body>
-        <table>
-            <thead> 
-                <tr>
-                	<td>Id</td>
-                    <td>Nome</td>
-                    <td>Sexo</td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="umpac : ${listapac}">
-                	<td th:text="${umpac.id}"></td>
-                    <td th:text="${umpac.nome}"></td>
-                    <td th:text="${umpac.sexo}"></td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="container">
+            <nav th:replace="layout :: menu">(menu)</nav>
+        	<div class="border border-dark">
+                <table class="table">
+                    <thead class="thead-light"> 
+                        <tr>
+                            <th scope="col">Nome</th>
+                            <th scope="col">Sexo</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr scope="row" th:each="umpac : ${listapac}">
+                            <td th:text="${umpac.nome}"></td>
+                            <td th:text="${umpac.sexo}"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div th:include="layout :: footer" id="footer">(footer)</div>
     </body>
 </html>
