--- a/src/main/resources/templates/paciente/index.html
+++ b/src/main/resources/templates/paciente/index.html
@@ -32,13 +32,13 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title">Confirmação de exclusão</h5>
+                            <h5 class="modal-title">Confirmaï¿½ï¿½o de exclusï¿½o</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">X</span>
                             </button>
                         </div>
                         <div class="modal-body">
-                            <p>Confirma a exclusão deste registro do Paciente?</p>
+                            <p>Confirma a exclusï¿½o deste registro do Paciente?</p>
                         </div>
                         <div class="modal-footer">
                             <a href="#" class="btn btn-warning btn-lg" id="btnConf" role="button">Sim</a>
